--- a/tmpl/collection.tmpl
+++ b/tmpl/collection.tmpl
@@ -13,6 +13,7 @@ func $(obj.name.value)FindOne(query interface{}, sortFields ...string) (result *
 }
 
 func $(obj.name.value.lower())Sort(q *mgo.Query, sortFields []string) {
+	sortFields = sortFieldsFilter(sortFields)
 	if len(sortFields) > 0 {
 		q.Sort(sortFields...)
 		return
