Refactor search handling

--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -2,7 +2,7 @@
 #if $obj.search != None
 type $(obj.name.value)SearchIndexObj struct {
 	#for field in $obj.search
-	$field string `json:"$(field)"`
+	$field.name.value $field.go_type `json:"$(field.name.value)"`
 	#end for
 	#for field in $obj.filterFields
 	#if $field.type == "string"
@@ -10,7 +10,7 @@ type $(obj.name.value)SearchIndexObj struct {
 	#else if  $field.type == "i64"
 	$field.name.value int64 `json:"$(field.name.value)"`
 	#else
-	$field.name.value has unsupported filter type 
+	$field.name.value has unsupported filter type
 	#end if
 	#end for
 }
@@ -18,7 +18,7 @@ type $(obj.name.value)SearchIndexObj struct {
 func (o *$obj.name.value) IndexSearch() () {
 	core.Index("$(obj.name.value.lower())", "simple", o.ID.Hex(), nil, $(obj.name.value)SearchIndexObj{
 		#for field in $obj.search
-		o.$(field),
+		o.$(field.name.value),
 		#end for
 		#for field in $obj.filterFields
 		o.$(field.name.value),
@@ -28,7 +28,7 @@ func (o *$obj.name.value) IndexSearch() () {
 
 var $(obj.name.value)SearchFileds = []string{
 	#for field in $obj.search
-	"$(field)",
+	"$(field.name.value)",
 	#end for
 }
 
