Try add list<string> filter support

--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -5,13 +5,7 @@ type $(obj.name.value)SearchIndexObj struct {
 	$field.name.value $field.go_type `json:"$(field.name.value)"`
 	#end for
 	#for field in $obj.filterFields
-	#if $field.type == "string"
-	$field.name.value string `json:"$(field.name.value)"`
-	#else if $field.type == "i64"
-	$field.name.value int64 `json:"$(field.name.value)"`
-	#else
-	$field.name.value has unsupported filter type
-	#end if
+	$field.name.value $field.go_type `json:"$(field.name.value)"`
 	#end for
 }
 
