--- a/tmpl/go_package.tmpl
+++ b/tmpl/go_package.tmpl
@@ -138,42 +138,53 @@ func getQuery(key string, data map[string]interface{}) map[string]interface{} {
 	return args
 }
 
-func getSearchObj(word string, fields []string, params map[string]string, termKeys map[string]bool, dateKeys map[string]bool) map[string]interface{} {
-	terms := make(map[string]string)
+func getSearchObj(word string, fields []string, params map[string]interface{}, termKeys map[string]bool, dateKeys map[string]bool) map[string]interface{} {
+	terms := make(map[string]interface{})
 	ranges := make(map[string]map[string]int64)
 
 	for k, v := range params {
-		if v == "" {
-			continue
-		}
-		if _, ok := termKeys[k]; ok {
-			terms[k] = v
-			continue
-		}
+		switch v := v.(type) {
+		case string:
+			if v == "" {
+				continue
+			}
+			if _, ok := termKeys[k]; ok {
+				terms[k] = v
+				continue
+			}
 
-		if isStart, ok := dateKeys[k]; ok {
-			intVal, _ := time.Parse(DateLayout, v)
-			if isStart {
-				fieldName := k[0 : len(k)-5]
-				if dateVal, ok := ranges[fieldName]; ok {
-					dateVal["gte"] = intVal.Unix()
-					ranges[fieldName] = dateVal
+			if isStart, ok := dateKeys[k]; ok {
+				intVal, _ := time.Parse(DateLayout, v)
+				if isStart {
+					fieldName := k[0 : len(k)-5]
+					if dateVal, ok := ranges[fieldName]; ok {
+						dateVal["gte"] = intVal.Unix()
+						ranges[fieldName] = dateVal
+					} else {
+						ranges[fieldName] = map[string]int64{
+							"gte": intVal.Unix(),
+							"lt":  intVal.AddDate(0, 0, 1).Unix(),
+						}
+					}
 				} else {
-					ranges[fieldName] = map[string]int64{
-						"gte": intVal.Unix(),
-						"lt":  intVal.AddDate(0, 0, 1).Unix(),
+					fieldName := k[0 : len(k)-3]
+					if dateVal, ok := ranges[fieldName]; ok {
+						dateVal["lt"] = intVal.AddDate(0, 0, 1).Unix()
+					} else {
+						ranges[fieldName] = map[string]int64{
+							"gte": intVal.AddDate(0, 0, -1).Unix() + 1,
+							"lt":  intVal.AddDate(0, 0, 1).Unix(),
+						}
 					}
 				}
-			} else {
-				fieldName := k[0 : len(k)-3]
-				if dateVal, ok := ranges[fieldName]; ok {
-					dateVal["lt"] = intVal.AddDate(0, 0, 1).Unix()
-				} else {
-					ranges[fieldName] = map[string]int64{
-						"gte": intVal.AddDate(0, 0, -1).Unix() + 1,
-						"lt":  intVal.AddDate(0, 0, 1).Unix(),
-					}
-				}
+			}
+		case []string:
+			if len(v) == 0 {
+				continue
+			}
+			if _, ok := termKeys[k]; ok {
+				terms[k] = v
+				continue
 			}
 		}
 	}
@@ -191,13 +202,25 @@ func getSearchObj(word string, fields []string, params map[string]string, termKe
 
 	filter := make(map[string]interface{})
 	var must []interface{}
+	var should []interface{}
 
 	for k, v := range terms {
-		must = append(must, map[string]interface{}{
-			"term": map[string]string{
-				k: v,
-			},
-		})
+		switch v := v.(type) {
+		case string:
+			must = append(must, map[string]interface{}{
+				"term": map[string]string{
+					k: v,
+				},
+			})
+		case []string:
+			for _, val := range v {
+				should = append(should, map[string]interface{}{
+					"term": map[string]string{
+						k: val,
+					},
+				})
+			}
+		}
 	}
 
 	for k, v := range ranges {
@@ -208,7 +231,8 @@ func getSearchObj(word string, fields []string, params map[string]string, termKe
 		})
 	}
 	filter["bool"] = map[string]interface{}{
-		"must": must,
+		"must":   must,
+		"should": should,
 	}
 	filtered["filter"] = filter
 
