--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -43,7 +43,7 @@ var $(obj.name.value)SearchDateKeys = map[string]bool{
 }
 
 func $(obj.name.value)SearchWithParams(word string, params map[string]string, limit int, offset int) (core.SearchResult, error) {
-	searchObj := getSearchObj(word, $(obj.name.value)SearchFileds, params, $(obj.name.value)SearchTermKeys, $(obj.name.value)SearchDateKeys)
+	searchObj := XGetSearchObj(word, $(obj.name.value)SearchFileds, params, $(obj.name.value)SearchTermKeys, $(obj.name.value)SearchDateKeys)
 	args := map[string]interface{} {"from" : offset, "size": limit}
 	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchObj)
 }
@@ -57,7 +57,7 @@ func $(obj.name.value)SearchWithMoreParams(word string, params map[string]interf
 #end if
 
 func $(obj.name.value)Search(word string, limit int, offset int) (core.SearchResult, error) {
-	searchObj := getQuery("query_string", getQueryString(word, $(obj.name.value)SearchFileds))
+	searchObj := XGetQuery("query_string", XGetQueryString(word, $(obj.name.value)SearchFileds))
 	args := map[string]interface{} {"from" : offset, "size": limit}
 	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchObj)
 }
