--- a/tmpl/search.tmpl
+++ b/tmpl/search.tmpl
@@ -50,7 +50,7 @@ func $(obj.name.value)SearchWithParams(word string, params map[string]string, li
 
 #if $obj.need_searchmore
 func $(obj.name.value)SearchWithMoreParams(word string, params map[string]interface{}, limit int, offset int) (core.SearchResult, error) {
-	searchObj := getMoreSearchObj(word, $(obj.name.value)SearchFileds, params, $(obj.name.value)SearchTermKeys, $(obj.name.value)SearchDateKeys)
+	searchObj := XGetMoreSearchObj(word, $(obj.name.value)SearchFileds, params, $(obj.name.value)SearchTermKeys, $(obj.name.value)SearchDateKeys)
 	args := map[string]interface{} {"from" : offset, "size": limit}
 	return core.SearchRequest("$(obj.name.value.lower())", "simple", args, searchObj)
 }
