--- a/tmpl/form.tmpl
+++ b/tmpl/form.tmpl
@@ -44,6 +44,14 @@ func (o *$obj.name.value) ReadForm(params map[string]string) (hasError bool) {
 			intVal, _ := time.ParseInLocation(DateLayout, val, loc)
 			o.$field.name.value = intVal.Unix()
 		}
+	#else if $field.type == "i64" and $field.widget_type in ["time"]
+		if val == "" {
+			o.$field.name.value = 0
+		} else {
+		        loc, _ := time.LoadLocation("Local")
+			intVal, _ := time.ParseInLocation(TimeLayout, val, loc)
+			o.$field.name.value = intVal.Unix()
+		}
 	#else if $field.type == "i64"
 		intVal, _ := strconv.ParseInt(val, 10, 64)
 		o.$field.name.value = intVal
@@ -134,9 +142,11 @@ func (o *$obj.name.value) ${field.name.value}Widget() *Widget {
 		#else if $field.type == "i32"
 			Value : strconv.FormatInt(int64(o.$field.name.value), 10),
 		#else if $field.type == "i64" and $field.widget_type == "datetime"
-			Value : I64Time(o.$field.name.value),
+			Value : I64DateTime(o.$field.name.value),
 		#else if $field.type == "i64" and $field.widget_type == "date"
 			Value : I64Date(o.$field.name.value),
+		#else if $field.type == "i64" and $field.widget_type == "time"
+			Value : I64Time(o.$field.name.value),
 		#else if $field.type == "i64"
 			Value : strconv.FormatInt(o.$field.name.value, 10),
 		#else if $field.type == "bool"
@@ -246,9 +256,11 @@ func (o *$obj.name.value) GetFieldAsString(fieldKey string) (Value string) {
 				Value = strconv.FormatInt(int64(o.$field.name.value), 10)
 		}
 	#else if $field.type == "i64" and $field.widget_type == "datetime"
-		Value = I64Time(o.$field.name.value)
+		Value = I64DateTime(o.$field.name.value)
 	#else if $field.type == "i64" and $field.widget_type == "date"
 		Value = I64Date(o.$field.name.value)
+	#else if $field.type == "i64" and $field.widget_type == "time"
+		Value = I64Time(o.$field.name.value)
 	#else if $field.type == "i64"
 		widget := o.${field.name.value}Widget()
 		if widget.Type == "select" {
