--- a/tmpl/field_getMeta.tmpl
+++ b/tmpl/field_getMeta.tmpl
@@ -1,22 +1,10 @@
 func () (data []IXuanWuObj, head IXuanWuObj) {
-	data = []IXuanWuObj{}
-	jsonData := o.$field.name.value
-	var tmp interface{}
-	json.Unmarshal([]byte(jsonData), &tmp)
-	if tmp != nil {
-		if datas, ok := tmp.([]interface{}); ok{
-			for _, raw := range datas {
-				tmpObj := raw.(map[string]interface{})
-				single := map[string]string{}
-				for k, v := range tmpObj {
-					value, _ := v.(string)
-					single[k] = value
-				}
-				meta := New$(field.meta)()
-				meta.ReadForm(single)
-				data = append(data, IXuanWuObj(meta))
-			}
-		}
+	ids := o.$field.name.value
+	records, _ := $(table)FindByIDs(ids)
+	length := len(records)
+	data = make([]IXuanWuObj, 0, length)
+	for _, record := range records {
+		data = append(data, IXuanWuObj(record))
 	}
 
 	head = IXuanWuObj(New$(table)())
