--- a/tmpl/crud.tmpl
+++ b/tmpl/crud.tmpl
@@ -257,7 +257,9 @@ func $(className)Export(ctx *admin.AdminContext) (html string) {
 		ctx.Logger.Error(err)
 	}
 
-	fname := fmt.Sprintf("attachment;filename=\"%s_%s.xls\"", "$(obj.classLabel)", time.Now().Format("2006-01-02_1504"))
+	fname := fmt.Sprintf("%s_%s.xlsx", url.QueryEscape("$(obj.classLabel)"), time.Now().Format("2006-01-02_1504"))
+	fname = fmt.Sprintf("attachment;filename=\"%s\";filename*=utf-8''%s", fname, fname)
+	ctx.SetHeader("Content-Type", "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet; charset=utf-8", true)
 	ctx.SetHeader("Content-Disposition", fname, true)
 	return string(ret)
 }
